--- a/product/大数据与AI/流计算服务/操作指南/上下游数据一览.md
+++ b/product/大数据与AI/流计算服务/操作指南/上下游数据一览.md
@@ -10,13 +10,14 @@
 |    消息队列 CKafka    |     支持     |        支持         |       暂不支持        |
 |    云数据库 MySQL     | 限 JOIN 右表 |        支持         |         支持          |
 |  云数据库 MySQL CDC   |     支持     |       不支持        |        不支持         |
-|  云数据库 PostgreSQL  | 限 JOIN 右表 |        支持         | 支持（9.5及以上版本） |
-| Elasticsearch Service |    不支持    |        支持         |         支持          |
+|  云数据库 PostgreSQL  | 限 JOIN 右表 |        支持         | 支持（9.5及以上版本）   |
+| Elasticsearch Service |    不支持    |        支持         |         支持        |
 | 云数据仓库 PostgreSQL | 限 JOIN 右表 |        支持         |       暂不支持        |
 | 云数据仓库 ClickHouse |    不支持    |        支持         |         支持          |
-| Filesystem(HDFS/COS)  |    不支持    |        支持         |        不支持         |
-|         Hive          |    不支持    |        支持         |        不支持         |
+| Filesystem(HDFS/COS)  |    不支持    |        支持         |        不支持        |
+|         Hive          |    不支持    |        支持         |        不支持        |
 |    云数据库 Redis     |    不支持    |        支持         |         支持          |
+|         Kudu         |    支持     |        支持          |        支持          |
 
  > ! 
  >
